gedit-open-document-selector: Add max-content-height

This is an (intentional) behavior change in GtkScrolledWindow, without
this, the scrolled window can grow without limits and exceed the
supported size of a texture.

https://bugzilla.gnome.org/show_bug.cgi?id=770430